# MancusoMariaMilagros-PAG-Practicas-Desde7

./: AmbientLightApplicator.cpp  AmbientLightApplicator.h  CMakeLists.txt  Camara.cpp  DirectionalLightApplicator.cpp  DirectionalLightApplicator.h  EstrategiaLuz.h  EstrategiaLuzAmbiente.cpp  EstrategiaLuzAmbiente.h  EstrategiaLuzDireccional.cpp  EstrategiaLuzDireccional.h  EstrategiaLuzPuntual.cpp  EstrategiaLuzPuntual.h  Gui.cpp  Gui.h  Light.cpp  Light.h  LightApplicator.h  LightProperties.h  Luz.cpp  Luz.h  Malla.cpp  Malla.h  Material.h  Modelo.cpp  Modelo.h  PointLightApplicator.cpp  PointLightApplicator.h  PropiedadesLuz.h  ReadMe.md  Renderer.cpp  Renderer.h  ShaderProgram.cpp  SpotLightApplicator.cpp  SpotLightApplicator.h  main.cpp  pag06-fs.glsl  pag06-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  (+2 more)
